@@ -3015,6 +3015,20 @@ template <typename _From, typename _To>
   template<typename _Tp>
     using type_identity_t = typename type_identity<_Tp>::type;
 
+  /// Unwrap a reference_wrapper
+  template<typename _Tp>
+    struct unwrap_reference { using type = _Tp; };
+
+  template<typename _Tp>
+    struct unwrap_reference<reference_wrapper<_Tp>> { using type = _Tp&; };
+
+  /// Decay type and if it's a reference_wrapper, unwrap it
+  template<typename _Tp>
+    struct unwrap_ref_decay : unwrap_reference<decay_t<_Tp>> { };
+
+  template<typename _Tp>
+    using unwrap_ref_decay_t = typename unwrap_ref_decay<_Tp>::type;
+
 #endif // C++2a
 
 _GLIBCXX_END_NAMESPACE_VERSION
